# read5

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  README-ont.rst  README.md  README.rst  pipy.sh  pypi.sh  pyproject.toml  setup-ont.py  setup.cfg  setup.py
conda.recipe/: README.md  conda_build_config.yaml  env.yml  meta.yaml
conda.recipe/read5/: meta.yaml
conda.recipe/read5-ont/: meta.yaml
conda.recipe/read5_ont/: conda_build_config.yaml  meta.yaml
documentation/: AbstractFileReader.html  Exceptions.html  Fast5Reader.html  FileReader.html  Pod5Reader.html  README.sh  Reader.html  Slow5Reader.html  Slow5Reader.md  index.html  index.md  read5.html  read5.md
documentation/read5/: Exceptions.md  Fast5Reader.md  FileReader.md  Pod5Reader.md
read5/: .gitattributes  AbstractFileReader.py  Fast5Reader.py  FileReader.py  Pod5Reader.py  Reader.py  Slow5Reader.py  __init__.py  _version.py  read5.py  setup.py
read5-ont/: AbstractFileReader.py  Exceptions.py  Fast5Reader.py  Pod5Reader.py  Reader.py
read5/conda.recipe/: README.md  env.yml  meta.yaml  meta_use_pip_tar.yaml
read5/read5/: __init__.py  _version.py
read5_ont/: .gitattributes  AbstractFileReader.py  MANIFEST.in  Reader.py  __init__.py  _version.py  setup.cfg  setup.py
read5_ont/conda.recipe/: meta.yaml
read5_ont/read5_ont/: Fast5Reader.py  Pod5Reader.py  __init__.py
src/: AbstractFileReader.py  Fast5Reader.py  Pod5Reader.py  Reader.py  Slow5Reader.py  __init__.py  _version.py
tests/: ids.txt  test.blow5  test.slow5  test.slow5.idx  testFileReader.py  test_FileReader.py
tests/read5/: test.blow5.idx  test.pod5  test_FileReader.py
tests/read5_ont/: test.fast5  test_FileReader.py
